# marato-2024

./: notas.md
Backend/: .gitignore  Pacient.py  Paciente.py  install.sh  main.py  patient.py  pyproject.toml
Backend/static/: especialista.html  form.css  index.html  lector-qr.css  leerqr.html  paciente.html  urgencia.html  verqr.html
Backend/templates/: especialista.html  form_sintomas.html  header.html  header_con_todo.html  index.html  leerqr.html  login_paciente.html  paciente.html  resultado.html  urgencia.html  verqr.html
