[tool.poetry]
name = "marato-2024"
version = "0.1.0"
description = "Marató"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
python-multipart = "^0.0.19"
jinja2 = "^3.1.4"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
